@@ -68,6 +68,7 @@
 	* added support for bitcomet padding files
 	* improved support for sparse files on windows
 	* added ability to give seeding torrents preference to active slots
+	* added torrent_status::finished_time
 
 release 0.14.7
 
